Fixed footer alignment error

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  margin: 0px;
   font-family: Courier, monospace;
   text-align: center;
 }
@@ -23,7 +24,6 @@ a:hover {
 }
 
 footer {
-  margin-left: -8px; /*I'm guessing that I need to do this because of the default browser style */
   position: fixed;
   width: 100%;
   background-color: #bbb;
